# inner-cosmos

./: -s  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  README.zh-CN.md  UIUXdesign  docker-compose.yml  goal-objective.md  inner_cosmos_codex_愿景实现推进书_v_1_0.md  inner_cosmos_工程总纲_v_1_0.md  inner_cosmos_愿景文档_v_1_0.md  mvnw  mvnw.cmd  pom.xml  prometheus.yml  test_api.sh  提交说明.md
ai-lab/: README.md  pyproject.toml
ai-lab/evals/: __init__.py  capsule_runtime_pairwise.py  living_experience.py  models.py  psychology.py  psychology_compare.py  real_provider_pairwise.py
ai-lab/evals/adapters/: __init__.py  base.py  current_production.py  offline_baseline.py  registry.py
ai-lab/evals/cli/: main.py
ai-lab/evals/datasets/: __init__.py  loader.py  manifest.json  scenarios.jsonl
ai-lab/evals/judges/: __init__.py  base.py  deterministic.py  ensemble.py  human.py  llm.py
ai-lab/evals/metrics/: __init__.py  deterministic.py
ai-lab/evals/psychology/: scenarios.v1.jsonl
ai-lab/evals/reports/: __init__.py  generator.py
ai-lab/evals/schemas/: evaluation-report.schema.json  evaluation-scenario.schema.json  human-annotation.schema.json  system-run.schema.json  validator.py
ai-lab/tests/: test_adapters.py  test_capsule_runtime_pairwise.py  test_dataset.py  test_judges.py  test_living_experience.py  test_metrics.py  test_psychology.py  test_psychology_compare.py  test_real_provider_pairwise.py  test_reports.py  test_schemas.py
docs/: AI交互记录.md  (+9 more)
web/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.local.conf.json
web/src-tauri/capabilities/: default.json
(+1828 files in other folders)
