[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "inner-cosmos-innovation-evals"
version = "0.1.0"
description = "Offline, reproducible evaluation harness for Inner Cosmos innovation systems"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
inner-cosmos-eval = "evals.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["evals*"]

