[package]
name = "inner-cosmos"
version = "0.1.0"
description = "Inner Cosmos multi-platform emotional support companion"
authors = ["Inner Cosmos Team"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "inner_cosmos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-stronghold = "2"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
rand = "0.9"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[profile.dev.package.scrypt]
opt-level = 3
